<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/parent_background"
    android:paddingStart="24dp"
    android:paddingTop="56dp"
    android:paddingEnd="24dp"
    android:paddingBottom="56dp"
    tools:context=".view.fragment.MainMenuFragment">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ihuLogoSIV"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/materialTextView"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.20"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2"
        app:srcCompat="@drawable/ic_eparousiologio_logo" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/app_name"
        android:textColor="@color/logo_color"
        android:textSize="32sp"
        app:fontFamily="@font/roboto_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ihuLogoSIV" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/currentCourseMTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="start|center"
        android:text="Τρέχον μάθημα: -"
        android:textColor="@color/reverseBW"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialTextView"
        tools:ignore="HardcodedText" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/currentSectionMTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constrainedWidth="true"
        android:layout_marginTop="12dp"
        android:text="Τμήμα: -"
        android:textColor="@color/reverseBW"
        app:layout_constraintEnd_toEndOf="@+id/currentCourseMTV"
        app:layout_constraintStart_toStartOf="@+id/currentCourseMTV"
        app:layout_constraintTop_toBottomOf="@+id/currentCourseMTV"
        tools:ignore="HardcodedText" />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/isOpenSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/allow_attendance"
        android:textColor="@color/reverseBW"
        app:layout_constraintStart_toStartOf="@+id/currentSectionMTV"
        app:layout_constraintTop_toBottomOf="@+id/currentSectionMTV"
        app:thumbTint="@drawable/switch_thumb"
        app:trackTint="@drawable/switch_track" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/clearCourseMB"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        android:visibility="gone"
        android:layout_marginTop="8dp"
        android:text="@string/clear_course"
        android:textColor="@color/biometric_error_color"
        android:textSize="14sp"
        app:cornerRadius="16dp"
        app:iconGravity="start"
        app:iconPadding="8dp"
        app:rippleColor="@color/COLOR_ERROR_BG"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/isOpenSwitch"
        app:layout_constraintTop_toBottomOf="@+id/isOpenSwitch" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/selectCurrentSectionMB"
        style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        android:paddingStart="16dp"
        android:paddingTop="12dp"
        android:paddingEnd="16dp"
        android:paddingBottom="12dp"
        android:text="@string/select_current_section_lab"
        android:textColor="@color/main_menu_button_text_color"
        android:textSize="14sp"
        app:backgroundTint="@color/main_menu_button"
        app:cornerRadius="16dp"
        app:icon="@drawable/ic_lock_clock"
        app:iconGravity="start"
        app:iconPadding="8dp"
        app:iconTint="@color/main_menu_button_text_color"
        app:layout_constraintBottom_toTopOf="@+id/accessStudentRecordMB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clearCourseMB" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/accessStudentRecordMB"
        style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        android:paddingStart="16dp"
        android:paddingTop="12dp"
        android:paddingEnd="16dp"
        android:paddingBottom="12dp"
        android:text="@string/manage_students_record"
        android:textColor="@color/main_menu_button_text_color"
        android:textSize="14sp"
        app:backgroundTint="@color/main_menu_button"
        app:cornerRadius="16dp"
        app:icon="@drawable/ic_student"
        app:iconGravity="start"
        app:iconPadding="8dp"
        app:iconTint="@color/main_menu_button_text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectCurrentSectionMB" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/exportAttendanceMB"
        style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        android:paddingStart="16dp"
        android:paddingTop="12dp"
        android:paddingEnd="16dp"
        android:paddingBottom="12dp"
        android:text="@string/export_attendance_excel"
        android:textColor="@color/main_menu_button_text_color"
        android:textSize="14sp"
        app:backgroundTint="@color/main_menu_button"
        app:cornerRadius="16dp"
        app:icon="@drawable/ic_export_csv"
        app:iconGravity="start"
        app:iconPadding="8dp"
        app:iconTint="@color/main_menu_button_text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accessStudentRecordMB" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/importStudentRecordMB"
        style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        android:paddingStart="16dp"
        android:paddingTop="12dp"
        android:paddingEnd="16dp"
        android:paddingBottom="12dp"
        android:text="@string/import_elabs_file"
        android:textColor="@color/main_menu_button_text_color"
        android:textSize="14sp"
        app:backgroundTint="@color/main_menu_button"
        app:cornerRadius="16dp"
        app:icon="@drawable/ic_upload_file"
        app:iconGravity="start"
        app:iconPadding="8dp"
        app:iconTint="@color/main_menu_button_text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exportAttendanceMB" />

</androidx.constraintlayout.widget.ConstraintLayout>